[project]
name = "flaskassignment"
version = "0.1.0"
description = ""
authors = [
    {name = "akash",email = "akashkanagaraj03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "flask-limiter (>=3.10.1,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "flasgger (==0.9.7b2)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
